--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -47,6 +47,187 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="70" data-price="4.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31sCj7D"><img src="https://m.media-amazon.com/images/I/51DrLzuI4HL._SR400,400_.jpg" alt="Professional Pizza Cutter Wheel" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31sCj7D">Professional Pizza Cutter Wheel Hand Slicer with Razor Sharp Blade & Curved Handle - Dishwasher Safe</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$4.50</span><span class="ori_price">$14.99</span></address>
+      <textarea readonly="readonly" class="code_area">7065YCJ6</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>70% off at $14.99</strong> with promo code: <strong class="m_codes">7065YCJ6</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 08, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/31sCj7D">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="10.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2GVA5Wm"><img src="https://m.media-amazon.com/images/I/51WaZO-l05L._SR400,400_.jpg" alt="Fast Wireless Charger" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2GVA5Wm">Fast Wireless Charger, Qi Certified Wireless Charging Stand Compatible for iPhone X/XS/XS Max/XR, iPhone 8/8 Plus, ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$10.00</span><span class="ori_price">$24.99</span>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      <textarea readonly="readonly" class="code_area">602J2J5N</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>60% off at $24.99</strong> with promo code: <strong class="m_codes">602J2J5N</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 29, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2GVA5Wm">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="65" data-price="3.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2GTaBJy"><img src="https://m.media-amazon.com/images/I/610nfXOqWIL._SR400,400_.jpg" alt="AINOPE Cord Clip" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>65% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2GTaBJy">AINOPE Cord Clip, Convenient Desk Cable Organizer Self-Adhesive Cable Holder Silicone Material Durable Cord Holder for Home,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$3.50</span><span class="ori_price">$9.99</span></address>
+      <textarea readonly="readonly" class="code_area">651BWMK1</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>65% off at $9.99</strong> with promo code: <strong class="m_codes">651BWMK1</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 15, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2GTaBJy">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="15.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2GY3uzw"><img src="https://m.media-amazon.com/images/I/71engGxKaOL._SR400,400_.jpg" alt="Gasky Pet Fountain" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2GY3uzw">Gasky Pet Fountain Automatic Water Dispenser For Cats Dog Bird- Fresh Flowing Fountain Quite with 3 Stage Filter & 2L Capacity</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$15.59</span><span class="ori_price">$25.99</span>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">409OK2ZZ</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $25.99</strong> with promo code: <strong class="m_codes">409OK2ZZ</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 10, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2GY3uzw">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="12.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2TfnnH7"><img src="https://m.media-amazon.com/images/I/51EYo7Q+Y-L._SR400,400_.jpg" alt="CAMEL CROWN Women's Jogger Pants" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2TfnnH7">CAMEL CROWN Women's Jogger Pants with Pockets Soft Drawstring Sweatpants for Gym Running Jogging Lounging</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.49</span><span class="ori_price">$24.99</span></address>
+      <textarea readonly="readonly" class="code_area">50WGCOGM</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $24.99</strong> with promo code: <strong class="m_codes">50WGCOGM</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 11, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2TfnnH7">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="80" data-price="36.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2GVAx70"><img src="https://m.media-amazon.com/images/I/71amo+Eg-8L._SR400,400_.jpg" alt="Walkie Talkie" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>80% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2GVAx70">Walkie Talkie 1800MAH Battery Capacity Two Way Radio 2 watt Olywiz-819 Tiny Walkie Talkies UHF 400-470 Walkie talkies for...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$36.79</span><span class="ori_price">$183.96</span></address>
+      <textarea readonly="readonly" class="code_area">804QFKTF</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>80% off at $183.96</strong> with promo code: <strong class="m_codes">804QFKTF</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 03, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2GVAx70">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="14.39">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YQpN4k"><img src="https://m.media-amazon.com/images/I/61+RcYz9BvL._SR400,400_.jpg" alt="Pahajim Womens Bag Backpack" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YQpN4k">Pahajim Womens Bag Backpack Purse PU Leather Zipper Bags Schoolbag Fashion Casual Rucksack Satchel and handbag</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.39</span><span class="ori_price">$23.99</span></address>
+      <textarea readonly="readonly" class="code_area">40X9MEIP</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $23.99</strong> with promo code: <strong class="m_codes">40X9MEIP</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 11, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YQpN4k">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="11.98">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YzIE4l"><img src="https://m.media-amazon.com/images/I/619wHNaQSyL._SR400,400_.jpg" alt="Gentleman's Beard Club Facial Hair Growth..." /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YzIE4l">Gentleman's Beard Club Facial Hair Growth Formula Beard Growth Supplement Vitamin Grow a Fuller Thicker Beard 30 Tablets 1 Bottle </a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.98</span><span class="ori_price">$39.94</span></address>
+      <textarea readonly="readonly" class="code_area">70GBCOFF</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>70% off at $39.94</strong> with promo code: <strong class="m_codes">70GBCOFF</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 09, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YzIE4l">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="4.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2GU2f4n"><img src="https://m.media-amazon.com/images/I/71NNGA1eMbL._SR400,400_.jpg" alt="AINOPE HDMI Cable 6.6 ft" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2GU2f4n">AINOPE HDMI Cable 6.6 ft (4K 60Hz, HDMI 2.0, 18Gbps) - Armor Nylon Braided HDMI Cord - Audio Return(ARC) Compatible UHD...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$4.50</span><span class="ori_price">$8.99</span>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      <textarea readonly="readonly" class="code_area">50YMJPBJ</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $8.99</strong> with promo code: <strong class="m_codes">50YMJPBJ</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 20, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2GU2f4n">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="65" data-price="14.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KoysCI"><img src="https://m.media-amazon.com/images/I/61bORdf3yRL._SR400,400_.jpg" alt="Sonic Electric Toothbrush" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>65% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KoysCI">Sonic Electric Toothbrush with 5 Modes 4 Replacement Heads 60 Days Use Rechargeable Waterproof Oral Clean for...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.00</span><span class="ori_price">$39.99</span></address>
+      <textarea readonly="readonly" class="code_area">65QV17NR</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>65% off at $39.99</strong> with promo code: <strong class="m_codes">65QV17NR</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 10, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2KoysCI">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="50" data-price="26.45">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2GSwGYo"><img src="https://m.media-amazon.com/images/I/61oFActQhrL._SR400,400_.jpg" alt="Dash Cam Dash Cameras Car Camera" /></a>
