--- a/app/views/deals/_body_most_reviewed.html.erb
+++ b/app/views/deals/_body_most_reviewed.html.erb
@@ -24,6 +24,7 @@
  <!-- Categories : coupons, sales, promotions, brands -->
  <div class="filter-node editors_box" data-filter='["30k","Crosstour Action Camera 4K 16MP WiFi Underwater 30M with Remote Control IP68 Waterproof Case"]'>
   <a target="_blank" href="https://amzn.to/2Lw8uy8"><img src="https://images-na.ssl-images-amazon.com/images/I/613OI7YttwL._SX679_.jpg" alt="Gold Box Deals"></a>
+  <div class="rating"><p>30K + Amazon Reviews</p></div>
   <div class="node-box inner">
     <p><a target="_blank" href="https://amzn.to/2Lw8uy8">Crosstour Action Camera 4K 16MP WiFi Underwater 30M with Remote Control IP68 Waterproof Case</a></p>
   </div>
