--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -20,28 +20,32 @@
        <p><span>#2</span> "Oh,igottabuythis" is the deal information platform to find thousands of Amazon best deals, coupon codes, promotions you love. Easy to keep up to date with the latest information of promotion codes, coupons, sales and so on. <br />We are going to update more information of other online stores!! Coming Soon  :D</p> -->
       </div>
 
-      <div class="works sections clearfix">
-        <p class="bodyline">HOW IT WORKS</p>
-        <!-- <h2 class="under_head">Quick way to find awesome products and the best deals. </h2> -->
+     <!--  <div class="works sections clearfix">
+        <p class="bodyline">HOW DOES IT WORK</p>
 
         <div class="left works_box">
-          <h3>Discover</h3>
-          <p>We Discover the best deals and trending items</p>
+          <h3>Discover & Curated</h3>
+          <p>We have discovered trending items form all around the world.</p>
+          <p>We have picked the best deals on Amazon.</p>
         </div>
 
         <div class="middle works_box">
-          <h3>Curate</h3>
+          <h3>Sharing</h3>
           <p>We Discover the best deals and trending items</p>
         </div>
 
         <div class="right works_box">
-          <h3>Share</h3>
+          <h3>Win-Win</h3>
           <p>We Discover the best deals and trending items</p>
         </div>
 
-        <p>"Oh,igottabuythis" contains affiliate links, which means that if you click on one of the product links, we’ll receive a small commission. This help support us and allows to continue to find and share good prodcuts and deals. Thank you for the support!</p>
-      </div>
+        <div class="support">
+          <p>"Oh,igottabuythis" contains affiliate links, which means that if you click on one of the product links, we’ll receive a small commission. This help support us and allows to continue to find and share good prodcuts and deals. Thank you for the support!</p>
+        </div>
 
+      </div>
+      
+ -->
       <div class="qna sections clearfix">
        <p class="bodyline">Q & A</p>
        <h3># Do you actually sell products on this website?</h3>
