--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,36 +4,36 @@
       <div class="footer-content">
         
         <div class="footer-section about clearfix">
-          <h1 class="logo-text"><span>Oh,</span>i gotta buy this</h1>
+          <h2 class="logo-text"><span>Oh,</span>i gotta buy this</h2>
           <p>It is discount platform but also trending item platform</p>            
-          <div class="contact">
-            <span><i class="fas fa-envelope"></i> &nbsp; ohigottabuythis@gmail.com </span>
-          </div>
           <div class="socials">
-            <a target="_blank" href="#n"><i class="fab fa-facebook-square"></i></a>
-            <a target="_blank" href="#n"><i class="fab fa-instagram"></i></a>
-            <a target="_blank" href="#n"><i class="fab fa-twitter"></i></a>
-            <a target="_blank" href="#n"><i class="fab fa-youtube"></i></a>
+            <a target="_blank" href="https://www.facebook.com/0higottabuythis/"><img src="<%=asset_path 'facebook.png' %>" alt="facebook"></a>
+            <a target="_blank" href="https://www.instagram.com/oh_igottabuythis"><img src="<%=asset_path 'instagram.png' %>" alt="instagram"></a>
+            <a target="_blank" href="https://www.pinterest.co.kr/ohigottabuythis"><img src="<%=asset_path 'pinterest.png' %>" alt="pinterest"></a>
+            <a target="_blank" href="https://twitter.com/ohigottabuythis"><img src="<%=asset_path 'twitter.png' %>" alt="twitter"></a>
+            <a class="footer_tube" target="_blank" href="https://www.youtube.com/channel/UCPtAAP5zlHCRYdCDqGR_jeA?view_as=subscriber"><img src="<%=asset_path 'youtube_02.png' %>" alt="youtube"></a>
           </div>
         </div>
         <div class="footer-section contact-form clearfix">
-          <h1>Quick Link</h1>
+          <h2>Quick Link</h2>
           <ul class="clearfix">
-            <li><a href="#n">#Home</a></li>
-            <li><a href="#n">#Category</a></li>
-            <li><a href="#n">#Featured</a></li>
-            <li><a href="#n">#Daily Deals</a></li>
-            <li><a href="#n">#Promo Codes</a></li>
-            <li><a href="#n">#Quick Search</a></li>
-            <li><a href="#n">#Promotion</a></li>
+            <li><a href="/">#Home</a></li>
+            <li><a href="/categories">#Category</a></li>
+            <li><a href="/recommends">#Featured</a></li>
+            <li><a href="/deals/bestdeals">#Daily Deals</a></li>
+            <li><a href="/deals/promo_codes">#Promo Codes</a></li>
+            <li><a href="/deals/promotions">#Promotion</a></li>
+            <li><a href="/deals/quick_search">#Quick Search</a></li>
+            <li><a href="/messages">#About Us</a></li>
+            <li><a href="/messages/new">#Contact Us</a></li>
           </ul>
-          <div class="contact_us">
-            <h1>About</h1>
+          <!-- <div class="contact_us">
+            <h2>About</h2>
             <ul class="clearfix">
               <li><a href="/messages">#About Us</a></li>
               <li><a href="/messages/new">#Contact Us</a></li>
             </ul>
-          </div>
+          </div> -->
         </div>
 
       </div><!--./footer-content-->
