--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -355,18 +355,19 @@ header .gnb_m,header .gnb_open2{display:none;}
 
 /* for Footer Section */
 .footer{background:#000;color:#fff;font-family: 'Montserrat', sans-serif;margin-top:75px;}
-.footer .footer-content .footer-section{padding:25px 25px 10px 25px;}
-.footer .footer-content h1, .footer .footer-content h2{color:#fff;}
+.footer .footer-content .footer-section{padding:10px;}
+.footer .footer-content h1, .footer .footer-content h2{color:#fff;margin-bottom:5px;}
 .footer .footer-content .about{float:left;width:49%;margin-right:1%;}
 .footer .footer-content .contact-form{float:left;width:49%;margin-left:1%;}
-.footer .footer-content .about p{margin:10px 0;}
-.footer .footer-content .about h1 span{color:#08f;}
+.footer .footer-content .about p{margin-bottom:10px;}
+.footer .footer-content .about h2 span{color:#08f;}
 .footer .footer-content .about .contact span{display:block;margin-bottom:8px;}
-.footer .footer-content .about .socials a{border:1px solid #616161;width:45px;height:41px;padding-top:5px;margin-right:5px;text-align:center;display:inline-block;font-size:1.3em;border-radius:5px;transition:all .3s;}
-.footer .footer-content .about .socials a:hover{border:1px solid #fff;color:#fff;transition:all .3s;}
-.footer .footer-content .contact-form ul{margin:10px 0;}
-.footer .footer-content .contact-form ul li{float:left;margin:0 2% 3% 0;}
-.footer .footer-content .contact-form ul li a{text-decoration:none;color:#000;background:#fff;padding:5px 7px;border-radius:10px;}
+.footer .footer-content .about .socials a{width:45px;padding-top:5px;margin-right:5px;text-align:center;display:inline-block;font-size:1.3em;border-radius:5px;}
+.footer .footer-content .about .socials a img{background:#fff;}
+.footer .footer-content .about .socials .footer_tube img{width:48px;}
+.footer .footer-content .contact-form ul{padding:0 10px;margin-top:10px;}
+.footer .footer-content .contact-form ul li{float:left;margin:0 2% 2% 0;}
+.footer .footer-content .contact-form ul li a{text-decoration:none;color:#000;background:#fff;padding:5px 7px;border-radius:10px;font-size:12px;}
 .footer .footer-content .contact_us{}
 .footer .footer-content .contact_us a{text-decoration:none;color:#fff;}
 .footer .footer-bottom{background:#000;height:50px;width:100%;text-align:center;position:absolute;bottom:0px;left:0px;}
